# fluent-ai

./: .gitignore  BUILDER_EXTRACTION_PLAN.md  CLAUDE.md  COMPREHENSIVE_AUDIT_TODO.md  COMPREHENSIVE_ERROR_LIST.md  Cargo.toml  DOMAIN_DUPLICATION_REMOVAL.md  FLUENT_AI_RIG_INTEGRATION_PLAN.md  FOCUSED_FIXES.md  ON_CHUNK_CONVERSION.md  PERFORMANCE_TODO.md  PRODUCTION_QUALITY_PLAN.md  RFC_COMPLIANCE.md  TODO.md  TODO_ARCHITECTURAL_REFACTOR.md  TODO_CANDLE_ADDITION.md  TODO_ERRORS_WARNINGS.md  WARNINGS_TODO.md  WORKSPACE_ERRORS_AUDIT.md  WORKSPACE_ERRORS_FINAL_PUSH.md  WORKSPACE_ERRORS_PROGRESS.md  cargo_check_current.txt  cargo_check_errors.txt  cargo_check_full.txt  cargo_check_full_output.txt  cargo_check_output.txt  cargo_warnings_full.txt  check_output.txt  compile_errors.txt  convert_to_with_channel.py  current_check_output.txt  current_errors.txt  current_status.txt  current_status_2.txt  cylo_integration_summary.md  debug_failing_tests.rs  debug_hang_test.rs  debug_infinite_loop_simple.rs  domain_check_final.txt  domain_errors.txt  (+31 more)
.cargo/: config.toml
.config/: hakari.toml  nextest.toml
cyrup-agent/: Cargo.toml
cyrup-agent/docs/RIG/: README.md
cyrup-agent/docs/RIG/assistant-content/: README.md
cyrup-agent/docs/RIG/completion-error/: README.md
cyrup-agent/docs/RIG/completion-request-builder/: README.md
cyrup-agent/docs/RIG/completion-response/: README.md
cyrup-agent/docs/RIG/text/: README.md
cyrup-agent/docs/RIG/tool-function/: README.md
cyrup-agent/docs/RIG/tool-result/: README.md
cyrup-agent/docs/RIG/tool-result-content/: README.md
cyrup-agent/src/: audio_generation.rs  http.rs  json_util.rs  lib.rs  one_or_many.rs  prelude.rs  streaming.rs  transcription.rs
cyrup-agent/src/agent/: builder.rs  completion.rs
cyrup-agent/src/client/: builder.rs  embeddings.rs  images.rs  mod.rs
cyrup-agent/src/completion/: builder.rs  message.rs
cyrup-agent/src/embeddings/: builder.rs  mod.rs
cyrup-agent/src/providers/: mod.rs
cyrup-agent/src/providers/anthropic/: client.rs  completions_builder_ext.rs  prompt_tools.rs
cyrup-agent/src/providers/anthropic/decoders/: jsonl.rs  line.rs  sse.rs
cyrup-agent/src/providers/azure/: audio_generation.rs  client.rs  completion.rs  embedding.rs  image_generation.rs  streaming.rs
cyrup-agent/src/providers/deepseek/: mod.rs  streaming.rs
cyrup-agent/src/providers/groq/: client.rs  mod.rs  streaming.rs
cyrup-agent/src/providers/huggingface/: client.rs  completion.rs  streaming.rs
cyrup-agent/src/providers/mistral/: completion.rs
cyrup-agent/src/providers/ollama/: client.rs  completion.rs  streaming.rs
cyrup-agent/src/providers/openrouter/: client.rs  completion.rs  mod.rs
cyrup-agent/src/providers/perplexity/: streaming.rs
cyrup-agent/src/providers/xai/: client.rs  streaming.rs
cyrup-agent/src/runtime/: async_stream.rs  async_task.rs  channel.rs  thread_pool.rs
cyrup-agent/src/workflow/: conditional.rs  mod.rs  try_flow.rs  workflow.rs
docs/: AGENT_CLIENT_PROTOCOL.md  TOOLREGISTRY_TYPESTATE_BUILDER.md  pty_style_audit.md
examples/: tool_registry_examples.rs
fluent-ai/: ARCHITECTURE.md  Cargo.toml  TODO.md
fluent-ai-rig/: Cargo.toml
fluent-ai-rig/src/: lib.rs  main.rs
fluent-ai/examples/: chat_loop_example.rs
fluent-ai/src/: agent.rs  chat_loop.rs  collection_ext.rs  conversation.rs  engine.rs  fluent.rs  lib.rs  markdown.rs  mcp_tool.rs  memory.rs  prelude.rs  providers.rs  runtime.rs  streaming.rs  sugars.rs  workflow.rs
fluent-ai/src/async_task/: emitter_builder.rs  error_handlers.rs  mod.rs  stream.rs  task.rs
fluent-ai/src/domain/: agent.rs  agent_role.rs  audio.rs  chunk.rs  completion.rs  context.rs  conversation.rs  document.rs  embedding.rs  extractor.rs  image.rs  library.rs  loader.rs  mcp.rs  mcp_tool.rs  memory.rs  memory_ops.rs  memory_workflow.rs  message.rs  mod.rs  model_info_provider.rs  prompt.rs  tool.rs  tool_v2.rs  workflow.rs
fluent-ai/src/engine/: builder.rs  fluent_engine.rs
fluent-ai/src/loaders/: file.rs  mod.rs  pdf.rs
fluent-ai/src/loaders/epub/: errors.rs  loader.rs  text_processor.rs
fluent-ai/tests/: engine_registry_test.rs
forks/: Cargo.toml
forks/examples/wasm_github_fetch/: package-lock.json
forks/reqwest/examples/: connect_via_lower_priority_tokio_runtime.rs
forks/reqwest/examples/wasm_github_fetch/: package-lock.json
forks/reqwest/src/: lib.rs
forks/reqwest/src/async_impl/: multipart.rs
forks/reqwest/tests/: proxy.rs
forks/tests/: brotli.rs  client.rs  deflate.rs  gzip.rs  proxy.rs
provider/: Cargo.toml  TODO.md  build.rs  models.yaml
provider/src/: lib.rs  main.rs  model.rs  model_info.rs  models.rs  provider.rs  providers.rs
tests/: error_recovery_resilience.rs  performance_validation.rs  tools_typestate_tests.rs
tests/domain/: architecture_syntax_tests.rs  capabilities_tests.rs  model_info_tests.rs  pricing_tests.rs  test_similarity.rs  usage_tests.rs
tests/memory/cognitive/: test_manager.rs
tests/provider/clients/anthropic/tools/: test_mod.rs
tests/provider/clients/openai/: test_client.rs
tests/unit/security/: credentials_test.rs  encryption_test.rs
v1/models/: README.md  huggingface.json  mistral.json  openai.json  together.json  xai.json
workspace-hack/: Cargo.toml
workspace-hack/src/: lib.rs
