[workspace]
resolver = "3"
members = [
    "packages/fluent-ai",
    "packages/provider",
    "packages/domain", 
    "packages/memory",
    "packages/http3",
    "packages/cylo",
    "packages/termcolor",

    "packages/fluent-ai-candle",
    "packages/cargo-hakari-regenerate"
,
    "workspace-hack"
]
exclude = ["tmp/rig", "tmp/cyrup-agent", "tmp/cyrup-sugars", "tmp/candle"]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["CYRUP AI"]
repository = "https://github.com/cyrup-ai/fluent-ai"

