[workspace]
resolver = "2"
members = [
    "packages/fluent-ai-async",
    "packages/fluent-ai",
    "packages/fluent-ai-candle",
    "packages/fluent-ai-simd",
    "packages/provider",
    "packages/domain", 
    "packages/memory",
    "packages/http3",
    "packages/yaml-model-info",
    "packages/cylo",
    "packages/termcolor",
    "packages/cargo-hakari-regenerate",
    "workspace-hack", "packages/model-info",
]
exclude = ["tmp/rig", "tmp/cyrup-agent", "tmp/cyrup-sugars", "tmp/candle"]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["CYRUP AI"]
repository = "https://github.com/cyrup-ai/fluent-ai"

