[workspace]
resolver = "2"
members = [
    "workspace-hack",
    "forks/reqwest",
    "packages/async-stream",
    "packages/fluent-ai",
    "packages/candle",
    "packages/simd",
    "packages/domain",
    "packages/memory",
    "packages/http3",
    "packages/yaml-model-info",
    "packages/cylo",
    "packages/termcolor",
    "packages/cargo-hakari-regenerate",
    "packages/model-info",
    "packages/provider",
    "packages/sweetmcp/packages/axum",
    "packages/sweetmcp/packages/pingora",
    "packages/sweetmcp/packages/daemon",
    "packages/sweetmcp/packages/autoconfig",
    "packages/sweetmcp/packages/plugin-builder",
    "packages/sweetmcp/packages/voice-tools",
    "packages/sweetmcp/plugins/arxiv",
    "packages/sweetmcp/plugins/browser",
    "packages/sweetmcp/plugins/eval-js",
    "packages/sweetmcp/plugins/eval-py",
    "packages/sweetmcp/plugins/eval-rs",
    "packages/sweetmcp/plugins/eval-sh",
    "packages/sweetmcp/plugins/fetch",
    "packages/sweetmcp/plugins/fs",
    "packages/sweetmcp/plugins/hash",
    "packages/sweetmcp/plugins/ip",
    "packages/sweetmcp/plugins/qr-code",
    "packages/sweetmcp/plugins/reasoner",
    "packages/sweetmcp/plugins/time",
]
exclude = ["tmp/rig", "tmp/cyrup-agent", "tmp/cyrup-sugars", "tmp/candle"]


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["CYRUP AI"]
repository = "https://github.com/cyrup-ai/fluent-ai"

[patch.crates-io]
reqwest = { path = "forks/reqwest" }
