[package]
name = "cyrup_agent"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High‑performance, zero‑alloc, fully‑async inference + agent runtime built on crossbeam & Tokio"
repository = "https://example.com/cyrup_agent.git"

[features]
# default features keep the footprint minimal while enabling async & crossbeam utilisation
default = ["rt-tokio"]
rt-tokio = ["dep:tokio", "dep:parking_lot"]

[dependencies]
# Core async runtime
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time"], optional = true, default-features = false }
# HTTP client (OpenAI REST)
reqwest = { version = "0.12.20", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
# Concurrency primitives
crossbeam-queue = "0.3.12"
crossbeam-channel ="0.5.15"
parking_lot = { version = "0.12.4", optional = true }
# Futures/Streams
futures = "0.3.31"
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
futures-util = "0.3.31"
once_cell = "1.21.3"
dashmap = "6.1.0"
crossbeam-deque = "0.8.6"
num_cpus = "1.17.0"
schemars = "0.9.0"
async-stream = "0.3.6"
futures-core = "0.3.31"
reqwest-eventsource = "0.6.0"
ordered-float = "5.0.0"

[dev-dependencies]
# utility for compile‑time assertions
static_assertions = "1.1.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time"] }
