[package]
name = "fluent-ai-rig"
version = "0.1.0"
edition = "2024"

[lib]
name = "fluent_ai_rig"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.88"
fluent-ai = { version = "0.1.0", path = "../fluent-ai" }
rig-core = { git = "https://github.com/0xPlaygrounds/rig.git", branch = "main", version = "0.14.0", features = ["all", "mcp", "reqwest-rustls", "audio", "image", "worker"] }
rig-surrealdb = { git = "https://github.com/0xPlaygrounds/rig.git", branch = "main", version = "0.1.7" }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
