[package]
name = "fluent-ai"
description = "Pure Traits & Builders over any AI Framework"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.12"
parking_lot = "0.12.4"
hashbrown = { version = "0.15.4", features = [
    "inline-more",
    "raw-entry"
] }
uuid = { version = "1.0", features = ["v4"] }
indexmap = "2.10.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
base64 = "0.22"
glob = "0.3"
gix-hash = "0.18.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
fluent_ai_provider = { version = "0.1.0", path = "../provider" }

[lib]
name = "fluent_ai"
path = "src/lib.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


