[package]
name = "fluent-ai"
description = "Pure Traits & Builders over any AI Framework"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.12"
parking_lot = "0.12.4"
hashbrown = { version = "0.15.4", features = [
    "inline-more",
    "raw-entry"
] }
uuid = { version = "1.0", features = ["v4"] }
indexmap = "2.10.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
base64 = "0.22"
glob = "0.3"
gix-hash = "0.19.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
fluent_ai_provider = { version = "0.1.0", path = "../provider" }
sweetmcp_memory = { git = "https://github.com/cyrup-ai/sweetmcp", package = "sweetmcp_memory", branch = "main" }

# PDF/EPUB loader dependencies
lopdf = "0.36.0"
epub = "2.0.0"
quick-xml = "0.38.0"

# Zeroshot integration dependencies
pulldown-cmark = "0.13.0"
syntect = "5.2"
ratatui = { git = "https://github.com/ratatui-org/ratatui", branch = "main" }
smallvec = "1.13"
once_cell = "1.20"
crossterm = "0.29.0"

[lib]
name = "fluent_ai"
path = "src/lib.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


